--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Librería de p5.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
 
+    <!-- Librería para confetty -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
     <!-- Estilos -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="public/styles/inicio.css" />
